fix button alignment

--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -29,6 +29,7 @@ $nova_light: "Proxima Nova Lt";
     background-color:$bl !important;
     color: white !important;
     margin-bottom: 5px auto !important;
+    margin-top: 10px;
     &:hover{
         background-color: $gr !important;
         color: white !important;
